Bug 14708 - When a monitor is added to the desktop configuration with xrandr; EXA stops to function with xf86-video-ati.
Summary: When a monitor is added to the desktop configuration with xrandr; EXA stops t...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: 7.3 (2007.09)
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-27 22:48 UTC by Brian
Modified: 2008-02-28 08:49 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
X.org conf file (999 bytes, application/octet-stream)
2008-02-27 22:50 UTC, Brian
no flags Details
Possible fix (9.14 KB, patch)
2008-02-28 01:49 UTC, Michel Dänzer
no flags Details | Splinter Review

Description Brian 2008-02-27 22:48:44 UTC
When I enable my external LCD monitor using xrandr I seem to lose EXA acceleration, I base this on the fact 2d acceleration seems to have gone away, there is not log output confirming it. Things get drawn/refreshed incorrectly across the two screens as windows move, and take a few moments to get refreshed properly. When returning to just outputting on the LVDS EXA works again.   

XAA seems to work in both dual and single monitor configurations. 

I am using commit e40d75fd8b2aece9dae8076fac822a4a83025fb2 from git. 

The card is an R500 chip in a e1505 laptop. (x1400 mobility) 

I attached the Xorg log. My configuration file is pretty standard. No monitor section in the file, I setup a virtual screen size of 2960x1050. 

Thanks.
Comment 1 Brian 2008-02-27 22:50:05 UTC
Created attachment 14627 [details]
X.org conf file
Comment 2 Michel Dänzer 2008-02-28 01:49:49 UTC
Created attachment 14637 [details] [review]
Possible fix

Does this patch help?
Comment 3 Brian 2008-02-28 08:16:55 UTC
(In reply to comment #2)
> Created an attachment (id=14637) [details]
> Possible fix
> 
> Does this patch help?
> 

Yes, I applied the patch and now when I enable the second monitor EXA continues to work. 

Thanks for the quick turnaround on the problem. 
Comment 4 Julien Cristau 2008-02-28 08:22:30 UTC
(In reply to comment #3)
> Yes, I applied the patch and now when I enable the second monitor EXA continues
> to work. 
> 
> Thanks for the quick turnaround on the problem. 
> 
please don't close bugs until the fix is actually applied...
Comment 5 Michel Dänzer 2008-02-28 08:49:39 UTC
(In reply to comment #3)
> Thanks for the quick turnaround on the problem. 

Heh, it's because this was already discussed on the mailing lists a couple of days ago, the reporter there just hadn't got around to testing the fix. Thanks for giving it a spin.

Pushed as commit 72a53d6f20ac29b3baddb7d8af04f19b76d2e04f .


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.