Handle EXA coordinate limits more cleverly.

Generally set the 2D engine limits, and only enforce the 3D engine limits in the
CheckComposite hook. This should still prevent useless migration of pixmaps the
3D engine can't handle but allows for basic acceleration of bigger ones.

Fixes http://bugs.freedesktop.org/show_bug.cgi?id=14708 .